--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.dagger_version = '2.23.2'
     ext.glide_version = '4.6.1'
     ext.lifecycle_version = '2.0.0'
+    ext.room_version = '2.2.0-beta01'
     ext.paging_version = '2.1.0'
     repositories {
         google()
