--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.lifecycle_version = '2.0.0'
     ext.room_version = '2.2.0-beta01'
     ext.paging_version = '2.1.0'
+    ext.work_version = '2.2.0'
     repositories {
         google()
         jcenter()
