--- a/data/build.gradle
+++ b/data/build.gradle
@@ -18,11 +18,21 @@ android {
 
         buildConfigField "String", "API_KEY", NEWS_API_KEY
         buildConfigField "String", "BASE_API_URL", NEWS_API_BASE_URL
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 
     buildTypes {
@@ -61,6 +71,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
+
+    api "androidx.work:work-runtime-ktx:$work_version"
+    api "androidx.work:work-rxjava2:$work_version"
 
     testImplementation "androidx.room:room-testing:$room_version"
 
